Fixed images being cut off on mobile due to overflow hidden.

--- a/assets/sass/components/sections/_banners.scss
+++ b/assets/sass/components/sections/_banners.scss
@@ -36,6 +36,10 @@
       bottom: 0;
       left: 50%;
       transform: translate(-50%);
+      @media (max-width: 1024px) {
+        width: auto;
+        max-height: 420px;
+      }
       @include m('1') {
         margin-left: 0px;
         left: 0;
